# tauri-plugin-music-notification

./: Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: ExamplePlugin.kt  MusicPlayerService.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
musictest/: settings.gradle.kts
musictest/app/: build.gradle.kts
musictest/app/src/main/: AndroidManifest.xml
musictest/app/src/main/java/com/example/musictest/: MainActivity.kt  MusicPlayerService.kt
musictest/app/src/main/java/com/example/musictest/ui/theme/: Color.kt  Theme.kt
musictest/app/src/main/res/values/: strings.xml  themes.xml
musictest/gradle/: libs.versions.toml
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
