[package]
name = "tauri-plugin-music-notification-api"
version = "0.2.0"
authors = [ "VMASPAD" ]
description = "A Tauri plugin for music notifications"
edition = "2021"
rust-version = "1.77.2"
repository = "https://github.com/VMASPAD/tauri-plugin-music-notification"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "music-notification"
license = "MIT"
[dependencies]
tauri = { version = "2.9.1" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
